refactor(context): 收口 transcript 消息装配并清理上下文残留
- 将历史上下文改为有序 transcript 消息流，收口 ContextEngine、ContextAssembler、ProviderMessageBuilder 与 ContextPreview 链路\n- 删除 ReactAgentLoop、Feishu 适配、SkillGenerator、Chunker 等确认无调用的旧分支与死代码\n- 移除 react-user-prompt-basic 模板并补充 ContextMessageFormatter 调试序列化\n- 修正 SpringAiProviderAdapter 的 JSON 修复逻辑，覆盖中文内嵌引号与 fenced JSON 场景\n- 同步更新后端测试与前端类型，确认后端编译和前端构建通过